<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSuperheroActivity">
    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="22dp"
            android:layout_marginHorizontal="16dp">
            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:text="@string/superman"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/tv_detail_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/tom_s"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginTop="0dp"
                android:gravity="bottom">
                <View
                    android:id="@+id/v_intelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="@color/orange"/>
                <View
                    android:id="@+id/v_strength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="@color/red"/>
                <View
                    android:id="@+id/v_speed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="@color/pink"/>
                <View
                    android:id="@+id/v_durability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="@color/purple"/>
                <View
                    android:id="@+id/v_power"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="@color/blue"/>
                <View
                    android:id="@+id/v_combat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="@color/green"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                android:id="@+id/tv_intelligence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/intelligence"/>
            <TextView
                android:id="@+id/tv_strength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/strength"/>
            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:textStyle="italic"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/speed"/>
            <TextView
                android:id="@+id/tv_durability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:maxLines="1"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/durability"/>
            <TextView
                android:id="@+id/tv_power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:text="@string/power"/>
            <TextView
                android:id="@+id/tv_combat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:textStyle="italic"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/combat"/>

        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>